# test_travis_ci

./: .env_vars  .travis.yml  .travis.yml.PW  .travis.yml.eric_working  .travis.yml.githubReleases  .travis.yml.old  CHANGELOG.md  README.md  pytest.ini  setup.cfg  tox.ini
.github/workflows/: limit_interactions.yml  limit_interactions_online_created.yml  test.yml
Requirements/: requirements-dev-for-release.txt  requirements-dev-local.txt
dev/: check_package_safety_bare.bat  kill_test_server.bat  make_shell_scripts_exec_in_git.bat  run_linters.bat  run_linters.sh  run_linters_ERIC.bat  run_test_server.bat  run_test_server.sh  run_test_server_detached.bat  run_test_server_detached.sh  run_tests.bat  run_tests.sh
dev/DevSetup/: GitSetup.bat
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Travis/: RunTravisTests.sh
eric/: __init__.py  foo.py
tests/TestServerContent/: SinglePageJS.html  SinglePageJS.js
tests/eric/: test_foo.py
