[bdist_wheel]
universal = true

[metadata]
name = test_travis_ci
version = 0.0.1a
author = Eric Ziethen
author-email = ericziethen@gmail.com
home-page = https://github.com/ericziethen/test_travis_ci
description = Test Travis CI
description-file =
    README.md
    CHANGELOG.md
license = GNU GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
package_dir=
    =eric
packages=find:

[options.packages.find]
where=eric